--- a/client/src/Css/responsiveNavbar.css
+++ b/client/src/Css/responsiveNavbar.css
@@ -1,3 +1,4 @@
+@media (max-width: 800px) {
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap");
 
 * {
@@ -10,27 +11,30 @@
 body {
   backdrop-filter: blur(3px);
   height: 100vh;
+  width: 100vw;
 }
 
 main {
-  background-color: blue;
   width: 100vw;
   height: 100vh;
   display: flex;
   flex-direction: row;
-  justify-content: space-evenly;
-  align-items: flex-start;
+  justify-content: center;
+  align-items: center;
   position: relative;
 }
 
 .navbar {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   justify-content: flex-start;
   align-items: center;
-  width: 6rem;
-  min-width: 6rem;
-  height: 100vh;
+  position: absolute;
+  z-index: 7;
+  bottom: 0;
+  width: 100vw;
+  min-width: 100vw;
+  height: 4.6rem;
   padding-top: 2rem;
   background-color: #212b36;
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.35);
@@ -38,10 +42,11 @@ main {
 
 .Icondiv {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   justify-content: flex-start;
   align-items: center;
-  margin-bottom: 2rem;
+  margin-left: 6%;
+  margin-right: 1%;
 }
 
 .NavIcon {
@@ -54,10 +59,10 @@ main {
 
 .iconsdiv {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   width: 100%;
-  height: 70vh;
-  justify-content: center;
+  height: 100%;
+  justify-content: space-evenly;
   align-items: center;
 }
 
@@ -120,6 +125,11 @@ main {
 .navbar hr {
   margin-bottom: 1rem;
   width: 80%;
+  visibility: hidden;
+  width: 0;
+  margin: 0;
+  padding: 0;
+  height: 0;
   border: 1px solid #494850;
 }
 
@@ -241,4 +251,6 @@ main {
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
+}
+
 }
