--- a/client/src/Css/responsiveNavbar.css
+++ b/client/src/Css/responsiveNavbar.css
@@ -135,10 +135,10 @@ main {
 
 .profile {
   position: absolute;
-  top: 7%;
-  left: 4%;
-  width: 0%;
-  height: 0%;
+  top: 0.7rem;
+  left: 2.5rem;
+  width: 3.4rem;
+  height: 3.4rem;
   border-radius: 3rem;
   display: flex;
   flex-direction: row;
@@ -148,18 +148,20 @@ main {
   backdrop-filter: blur(20px);
   background-blend-mode: overlay;
   box-shadow: 0 10px 15px rgb(0 0 0 / 20%);
-  z-index: 4;
+  z-index: -7;
+  opacity: 0;
   overflow: hidden;
-  transition: all 0.6s ease-out;
+  transition: all 0.4s ease-out;
 }
 
 .navbar.active .profile {
   position: absolute;
-  top: 10%;
-  left: 10%;
-  width: 80%;
-  height: 80%;
+  top: -34rem;
+  left: 3%;
+  max-width: 90vw;
+  max-height: 90vw;
   border-radius: 3rem;
+  opacity: 1;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -173,58 +175,71 @@ main {
 }
 
 .profileclose {
+    position: absolute;
+  z-index: 10;
   height: 2rem;
   width: 2rem;
   position: absolute;
-  right: 2rem;
-  top: 2rem;
+  right: 1rem;
+  top: 1rem;
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
 }
 
-.profile h1 {
-  position: absolute;
-  top: 1%;
-  font-size: 2rem;
-  color: #f9fafb;
-}
 
 .profileimgdiv {
   height: 100%;
-  width: 40%;
-  padding-left: 6%;
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   color: #f9fafb;
+  position: absolute;
 }
 
 .profileimgdiv img {
-  height: 20vw;
-  width: 20vw;
-  border-radius: 2rem;
+  height: 100%;
+  width: 100%;
+  border-radius: 3rem;
+  border: none;
+  object-fit: cover;
+}
+.profileimgdiv img:hover {
+border: none;
 }
 
-.profileimgdiv p {
-  font-size: 0.8rem;
+.blackDiv{
+  position: absolute;
+  z-index: 9;
+  height: 100%;
+  width: 800%;
+  top: 63%;
+  background-color: black;
+  filter: blur(80px);
 }
 
-.profiledata textarea {
+
+
+.profiledata textarea{
+      position: absolute;
+     bottom: -5%;
+    left: 6%;
+  z-index: 10;
   width: 88%;
   height: 20%;
-  color: #454f5b;
+  color: #f9fafb;
   border-radius: 19px;
-  background-color: #dfe3e8;
   padding-right: 1rem;
+  background-color: transparent;
   font-weight: 500;
   padding-top: 3px;
   border: none;
   outline: none;
   padding-left: 1rem;
-  font-size: 1rem;
+  font-size: 0.7rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -232,15 +247,27 @@ main {
 }
 
 .profile h3 {
+    position: absolute;
+    bottom: 20%;
+    font-size: 1.3rem;
+    font-weight: 1000;
+    color: #f9fafb;
+    left: 9%;
+  z-index: 10;
   margin-top: 1rem;
-  font-size: 2.4rem;
 }
 
-.profile h4 {
-  margin-left: 1rem;
-  font-size: 1.8rem;
-  color: #f9fafb;
+.profilepara {
+    position: absolute;
+    bottom: 14%;
+    font-size: 0.7rem;
+    color: #f9fafb;
+    left: 9%;
+    font-weight: 800;
+  z-index: 10;
+  margin-top: 1rem;
 }
+
 
 .profiledata {
   width: 60%;
@@ -252,5 +279,6 @@ main {
   justify-content: center;
   align-items: flex-start;
 }
+
 
 }
