added accept friend req rtk, and just completed the create froup setup will complete it next

--- a/client/src/Css/allchats.css
+++ b/client/src/Css/allchats.css
@@ -96,6 +96,7 @@
  transition: all 0.4s ease-out;
 }
 
+
 .accept:hover{
 color: #2d99ff;
 }
@@ -156,7 +157,8 @@ color: red;
 
 .allchats-addusers img{
   width: 4rem;
-  height: 4rem
+  height: 4rem;
+  object-fit: cover;
 }
 
 .allchats-addgroup {
@@ -212,7 +214,7 @@ color: red;
 
 .allchats-users {
   width: 30rem;
-  padding-top: 20vh;
+  padding-top: 23vh;
   padding-bottom: 25vh;
   height: 100vh;
   z-index: 0;
@@ -226,8 +228,7 @@ color: red;
   border-radius: 1rem;
   margin-left: 6%;
   margin-right: 6%;
-  margin-top: 4%;
-  padding: 0px;
+  margin-top: 1.3%;
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.35);
   display: flex;
   flex-direction: row;
@@ -260,12 +261,12 @@ color: red;
 }
 
 .person-image {
-  width: 65x;
-  height: 65px;
+  width: 70x;
+  height: 70px;
   border-radius: 50%;
   object-fit: cover;
   position: absolute;
-  left: 10px;
+  left: 8px;
 }
 
 .group-image {
@@ -326,14 +327,14 @@ color: red;
 
 .person-time {
   position: absolute;
-  right: 5px;
+  right: 30px;
   top: 20px;
   font-weight: 600;
 }
 
 .person-notification-count {
   position: absolute;
-  right: 11px;
+  right: 30px;
   bottom: 13px;
   font-weight: 600;
   background-color: #2d99ff;
