--- a/client/src/Css/creategroup.css
+++ b/client/src/Css/creategroup.css
@@ -14,7 +14,7 @@
   justify-content: center;
   align-items: center;
   background-color: #ffffff1d;
-  transition: all 0.4s ease-out;
+  transition: all 0.3s ease-out;
   overflow: hidden;
 }
 
@@ -36,7 +36,7 @@
   backdrop-filter: blur(20px);
   overflow: hidden;
   padding: 0.5rem;
-  transition: all 0.6s ease-in-out;
+  transition: all 0.3s ease-in-out;
 }
 
 .creategroup.move {
@@ -142,6 +142,9 @@
   margin: 0;
   width: 100%;
   border-radius: 0;
+  border: none;
+  color: #f9fafb;
+  outline: none;
   background-color: transparent;
   border-top: 1px solid #212b36;
   display: flex;
