--- a/client/src/Css/chat.css
+++ b/client/src/Css/chat.css
@@ -1,6 +1,5 @@
-
 .chatdefault {
-  width: 70%;
+  width: 100%;
   height: 100vh;
   background-color: #212b36;
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.35);
@@ -36,7 +35,6 @@
   justify-content: space-between;
   align-items: center;
   position: relative;
-  
 }
 
 .chat-person-div {
@@ -56,11 +54,11 @@
   transition: all 0.4s ease-in-out;
 }
 
-.person-dp img{
+.person-dp img {
   border: 3px solid transparent;
   transition: all 0.3s ease-in-out;
 }
-.person-dp img:hover{
+.person-dp img:hover {
   border: 3px solid #dfe3e8;
 }
 
@@ -166,26 +164,18 @@
 }
 
 .chat-texts {
-  position: block;
   width: 100%;
-  height: fit-content;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  padding-bottom: 10rem;
-  padding-top: 30rem;
-  align-items: center;
-  background-color: #212b36;
-  z-index: 1;
-  transition: all 0.4s ease-in-out;
+  height: 100%;
+  padding-top: 30%;
+  padding-bottom: 30%;
   overflow-y: scroll;
-  scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 .textsinboxOuterDiv {
   width: 100%;
   height: fit-content;
-  padding: 1rem;
+  padding: 0.7rem;
   padding-right: 6rem;
 }
 
@@ -193,35 +183,35 @@
   height: fit-content;
   width: fit-content;
   background-color: #c4cdd5;
- padding: 0.5rem;
+  padding: 0.5rem;
   border-radius: 1.4rem;
   border-bottom-left-radius: 0rem;
   position: relative;
 }
 
-.textsender{
+.textsender {
   font-weight: 800;
   font-size: 0.8rem;
-  color: #0C53B7;
-    padding-left: 0.5rem;
-    padding-right: 0.5rem;
+  color: #0c53b7;
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
 }
 
-.textsinboxp{
+.textsinboxp {
   color: #161c24;
- font-weight: 600;
+  font-weight: 600;
   font-size: 0.9rem;
   padding-left: 0.5rem;
-      padding-right: 0.5rem;
+  padding-right: 0.5rem;
 }
 
-.textsinboxtimeStamps{
+.textsinboxtimeStamps {
   font-size: 0.7rem;
   font-weight: 500;
   color: #c4cdd5;
   position: absolute;
   bottom: -1rem;
-    padding-left: 0.5rem;
+  padding-left: 0.5rem;
 }
 
 .textssentOuterDiv {
@@ -231,7 +221,7 @@
   flex-direction: row;
   justify-content: flex-end;
   align-items: center;
-  padding: 1rem;
+  padding: 0.6rem;
   padding-left: 6rem;
 }
 
@@ -245,24 +235,24 @@
   position: relative;
 }
 
-.textssentp{
+.textssentp {
   color: #f9fafb;
   font-weight: 600;
   font-size: 0.9rem;
-    padding-left: 0.5rem;
-        padding-right: 0.5rem;
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
 }
 
-.textssenttimeStamps{
-font-size: 0.6rem;
+.textssenttimeStamps {
+  font-size: 0.6rem;
   font-weight: 800;
   width: 8rem;
-  color: #DFE3E8;
-    color: #c4cdd5;
+  color: #dfe3e8;
+  color: #c4cdd5;
   position: absolute;
   bottom: -0.8rem;
   right: -5.5rem;
-    padding-left: 0.5rem;
+  padding-left: 0.5rem;
 }
 
 .chat-message-div {
@@ -359,6 +349,8 @@ font-size: 0.6rem;
   width: 9rem;
   height: 3rem;
   position: absolute;
+  border: none;
+  background-color: transparent;
   border-radius: 3rem;
   padding-left: 0.8rem;
   left: 0rem;
@@ -369,6 +361,15 @@ font-size: 0.6rem;
   align-items: center;
   backdrop-filter: blur(20px);
   z-index: 5;
+}
+
+.chatFileInput {
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
+  position: absolute;
+  opacity: 0;
 }
 
 .chat.active-files .chat-file:hover {
