--- a/client/src/Css/creategroup.css
+++ b/client/src/Css/creategroup.css
@@ -44,16 +44,18 @@
   width: 100%;
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
   position: relative;
 }
 
 .groupbackbtn {
-  position: absolute;
-  left: -0.6rem;
   height: 2.5rem;
   width: 4rem;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
   border: none;
   background-color: transparent;
   color: #f9fafb;
@@ -66,7 +68,6 @@
 }
 
 .groupnextbtn {
-  position: absolute;
   right: 0.5rem;
   height: 2.5rem;
   width: 4rem;
@@ -202,11 +203,12 @@
 
 .nextselectedmembers {
   width: 100%;
-  height: 70%;
+  height: 20rem;
+  background-color: #ffffff1d;
+  border-radius: 1rem;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: repeat(4, 1fr);
   gap: 0px;
-  padding-top: 2rem;
   overflow-y: scroll;
 }
