--- a/client/src/Css/groupsettings.css
+++ b/client/src/Css/groupsettings.css
@@ -1,13 +1,13 @@
 .groupsettings {
   position: absolute;
   top: 0rem;
-  left: 200%;
+  left: 0rem;
   z-index: 7;
   right: 3rem;
-  height: 100%;
+  height: 0;
   width: 100%;
   z-index: 3;
-  opacity: 1;
+  opacity: 0;
   display: flex;
   background-color: #212b36;
   flex-direction: column;
@@ -15,18 +15,14 @@
   align-items: center;
   overflow: hidden;
   padding: 0.5rem;
-  transition: all 0.2s ease-in;
+  transition: all 0.3s ease-in-out;
 }
 
 .groupsettings.active {
-  transform: translate-x(100%);
   position: absolute;
   top: 0rem;
   left: 0rem;
   z-index: 7;
-  border-top-right-radius: 1rem;
-  border-bottom-left-radius: 1rem;
-  border-bottom-right-radius: 1rem;
   right: 3rem;
   height: 100%;
   width: 100%;
@@ -39,15 +35,27 @@
   align-items: center;
   overflow: hidden;
   padding: 0.5rem;
-  transition: all 0.6s ease-in-out;
+  transition: all 0.3s ease-in-out;
 }
 
-.gsaddmembers{
-    background-color: #161c24;
+.addMemberOUterDiv {
+  height: 5rem;
   width: 100%;
-  height: fit-content;
-  border-radius: 1rem;
-  margin-bottom: 3rem;
+  border-top: 1px solid #212b36;
+  border-bottom: 1px solid #212b36;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  align-items: center;
+  background-color: #161c24;
+  border: none;
+  font-size: 1rem;
+  font-weight: 500;
+  border-radius: 1.3rem;
+  color: #c4cdd5;
+  margin-bottom: 2rem;
 }
 
 .groupsettingsmembersdiv {
@@ -55,8 +63,44 @@
   width: 100%;
   height: fit-content;
   border-radius: 1rem;
-    overflow-y: scroll;
+  overflow-y: scroll;
+}
 
+.addMembers-article {
+  background-color: white;
+  height: 0%;
+  width: 0%;
+  position: absolute;
+ top: 0rem;
+  right: 0rem;
+  opacity: 1;
+  z-index: -4;
+  transition: all 0.4s ease-out;
+  background-color: #ffffff1d;
+  backdrop-filter: blur(100px);
+}
+
+.addMembers-article.active {
+  background-color: white;
+  height: 100%;
+  width: 100%;
+  opacity: 1;
+  position: absolute;
+  top: 0rem;
+  right: 0rem;
+  z-index: 12;
+  background-color: #ffffff1d;
+  backdrop-filter: blur(150px);
+}
+
+.addMembers {
+  height: 100%;
+  width: 70%;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+  margin-left: 1.2rem;
 }
 
 .groupsettingsmembers {
@@ -66,11 +110,28 @@
   border-bottom: 1px solid #212b36;
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: flex-start;
   padding-left: 1rem;
   padding-right: 1rem;
   align-items: center;
-  color: #C4CDD5;
+  background-color: #161c24;
+  border: none;
+  font-size: 1rem;
+  font-weight: 500;
+  border-radius: 1.3rem;
+  color: #c4cdd5;
+}
+
+.AddMembersButton {
+  height: 2.8rem;
+  width: 2.8rem;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  border: none;
+  border-radius: 50%;
+  background-color: #2d99ff;
 }
 
 .groupsettingsimage {
@@ -80,11 +141,11 @@
   border-radius: 50%;
 }
 
-.gsimagediv{
+.gsimagediv {
   height: 6rem;
   width: 6rem;
   border-radius: 1rem;
-  background-color: #C4CDD5;
+  background-color: #c4cdd5;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -92,22 +153,21 @@
   margin-bottom: 1rem;
 }
 
-.gsimage{
+.gsimage {
   width: 5.8rem;
   height: 5.8rem;
   border-radius: 1rem;
   object-fit: cover;
-
 }
 
-.gsremovebtn{
+.gsremovebtn {
   width: 20%;
   height: 100%;
   background-color: transparent;
   border: none;
   outline: none;
-  color: orange;
-display: flex;
+  color: #c4cdd5;
+  display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
@@ -115,7 +175,7 @@ display: flex;
   transition: all 0.3s ease-in;
 }
 
-.gsremovebtn:hover{
+.gsremovebtn:hover {
   color: red;
 }
 
@@ -133,15 +193,15 @@ display: flex;
   border-radius: 1rem;
 }
 
-.gsexitbtn{
-    width: 50%;
+.gsexitbtn {
+  width: 50%;
   height: 100%;
   background-color: transparent;
   border: none;
   outline: none;
   color: red;
   font-weight: 600;
-display: flex;
+  display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
@@ -151,7 +211,7 @@ display: flex;
   transition: all 0.3s ease-in;
 }
 
-.gsexitbtn:hover{
+.gsexitbtn:hover {
   opacity: 1;
 }
 
@@ -169,15 +229,15 @@ display: flex;
   border-radius: 1rem;
 }
 
-.clearchat{
-    width: 50%;
+.clearchat {
+  width: 50%;
   height: 100%;
   background-color: transparent;
   border: none;
   outline: none;
   color: darkgoldenrod;
   font-weight: 600;
-display: flex;
+  display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
@@ -187,6 +247,6 @@ display: flex;
   transition: all 0.3s ease-in;
 }
 
-.clearchat:hover{
+.clearchat:hover {
   opacity: 1;
 }
