--- a/client/src/Css/chat.css
+++ b/client/src/Css/chat.css
@@ -36,6 +36,18 @@
   align-items: center;
   position: relative;
 }
+.backButton{
+  height: 0;
+  width: 0;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  background-color: transparent;
+  border: none;
+  color: #c4cdd5;
+  visibility: hidden;
+}
 
 .chat-person-div {
   height: 5rem;
