--- a/client/src/Css/groupsettings.css
+++ b/client/src/Css/groupsettings.css
@@ -36,10 +36,11 @@
   overflow: hidden;
   padding: 0.5rem;
   transition: all 0.3s ease-in-out;
+    overflow-y: scroll;
 }
 
 .addMemberOUterDiv {
-  height: 5rem;
+  height: 6rem;
   width: 100%;
   border-top: 1px solid #212b36;
   border-bottom: 1px solid #212b36;
@@ -56,15 +57,21 @@
   border-radius: 1.3rem;
   color: #c4cdd5;
   margin-bottom: 2rem;
+  transition: all 0.3s ease-in;
 }
 
+.addMemberOUterDiv:hover{
+  background-color: black;
+}
+
+
 .groupsettingsmembersdiv {
-  background-color: #161c24;
+  background-color: transparent;
   width: 100%;
   height: fit-content;
   border-radius: 1rem;
-  overflow-y: scroll;
 }
+
 
 .addMembers-article {
   background-color: white;
@@ -104,8 +111,9 @@
 }
 
 .groupsettingsmembers {
-  height: 4rem;
+  height: 4.6rem;
   width: 100%;
+  border: none;
   border-top: 1px solid #212b36;
   border-bottom: 1px solid #212b36;
   display: flex;
@@ -115,22 +123,28 @@
   padding-right: 1rem;
   align-items: center;
   background-color: #161c24;
-  border: none;
   font-size: 1rem;
   font-weight: 500;
-  border-radius: 1.3rem;
   color: #c4cdd5;
+  border-radius: 1rem;
+  transition: all 0.4s ease-in;
+}
+
+.groupsettingsmembers:hover{
+  background-color: #111;
 }
 
 .AddMembersButton {
-  height: 2.8rem;
-  width: 2.8rem;
+  height: 2rem;
+  width: 2rem;
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
   border: none;
   border-radius: 50%;
+  margin-top: 0.8rem;
+  margin-bottom: 0.8rem;
   background-color: #2d99ff;
 }
 
@@ -142,10 +156,10 @@
 }
 
 .gsimagediv {
-  height: 6rem;
-  width: 6rem;
+  height: 10rem;
+  width: 10rem;
   border-radius: 1rem;
-  background-color: #c4cdd5;
+  background-color: transparent;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -154,10 +168,11 @@
 }
 
 .gsimage {
-  width: 5.8rem;
-  height: 5.8rem;
-  border-radius: 1rem;
+  width: 12rem;
+  height: 12rem;
+  border-radius: 2rem;
   object-fit: cover;
+   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.35);
 }
 
 .gsremovebtn {
@@ -166,7 +181,7 @@
   background-color: transparent;
   border: none;
   outline: none;
-  color: #c4cdd5;
+  color: #2d99ff;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -180,7 +195,7 @@
 }
 
 .gsexit {
-  height: 4rem;
+  height: 6rem;
   width: 100%;
   border-top: 1px solid #212b36;
   border-bottom: 1px solid #212b36;
@@ -193,26 +208,31 @@
   border-radius: 1rem;
 }
 
+.gsexit:hover{
+  background-color: black;
+}
+
 .gsexitbtn {
-  width: 50%;
-  height: 100%;
-  background-color: transparent;
+  width: 100%;
+  height: 3rem;
   border: none;
   outline: none;
-  color: red;
+  color: rgb(210, 77, 28);
   font-weight: 600;
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
+  background-color: #161c24;
   position: relative;
   font-size: 1.3rem;
-  opacity: 0.8;
+  border-radius: 1rem;
   transition: all 0.3s ease-in;
 }
 
 .gsexitbtn:hover {
-  opacity: 1;
+  color: red;
+  background-color: black;
 }
 
 .clearchatdiv {
@@ -225,17 +245,23 @@
   justify-content: center;
   align-items: center;
   margin-top: 0.8rem;
-  background-color: #161c24;
+  background-color:#161c24;
   border-radius: 1rem;
+  transition: all 0.3s ease-in;
 }
+
+.clearchatdiv:hover{
+  background-color: black;
+}
+
 
 .clearchat {
   width: 50%;
-  height: 100%;
+  height: 3rem;
   background-color: transparent;
   border: none;
   outline: none;
-  color: darkgoldenrod;
+  color: #c4cdd5;
   font-weight: 600;
   display: flex;
   flex-direction: row;
@@ -243,10 +269,10 @@
   align-items: center;
   position: relative;
   font-size: 1.3rem;
-  opacity: 0.8;
+  opacity: 1;
   transition: all 0.3s ease-in;
 }
 
 .clearchat:hover {
-  opacity: 1;
+  color: #2d99ff;
 }
