--- a/client/src/Css/responsiveAllChats.css
+++ b/client/src/Css/responsiveAllChats.css
@@ -3,8 +3,8 @@
   width: 100vw;
   height: 100vh;
   background-color: #161c24;
-  position: relative;
-  z-index: 6;
+  position: absolute;
+  z-index: 4;
 }
 
 .allchats-header {
@@ -33,6 +33,159 @@
   padding: 0;
 }
 
+.headerAllChats{
+  height: 100%;
+  width: 30%;
+}
+
+.notificationBadge {
+  position: absolute;
+  top: 3px;
+  right: 3px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  width: 1rem;
+  height: 1rem;
+  border-radius: 50%;
+  background-color: red;
+  color: white;
+}
+
+.notificationBadge p {
+  font-size: 0.8rem;
+  font-weight: 1000;
+}
+
+.allchats-notifications {
+   height: 2.3rem;
+  width: 2.3rem;
+  border-radius: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  transition: 0.4s ease-out;
+  position: relative;
+  z-index: 5;
+}
+
+.allchats-notifications:hover {
+  background-color: #212b36;
+}
+
+.notificationHeading {
+  width: 100%;
+  height: 3rem;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.notifications-article {
+  background-color: white;
+  height: 0;
+  width: 0;
+  max-width: 0rem;
+  border-radius: 1.3rem;
+  position: relative;
+  opacity: 0;
+  z-index: 0;
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
+  opacity: 0;
+  transition: 0.4s ease-out;
+  background-color: #ffffff1d;
+  backdrop-filter: blur(200px);
+}
+
+.notifications-article.active {
+  background-color: white;
+  height: 70vh;
+  width: 90vw;
+  opacity: 1;
+  border-radius: 1.3rem;
+  position: absolute;
+  top: 3rem;
+  right: -3rem;
+  opacity: 1;
+  z-index: 9;
+  background-color: #ffffff1d;
+  backdrop-filter: blur(60px);
+}
+
+.friendlistdivs p {
+  color: #dfe3e8;
+  font-weight: 600;
+  font-size: 0.8rem;
+  transition: all 0.4s ease-out;
+}
+
+.accept:hover {
+  color: #2d99ff;
+}
+
+.cancel:hover {
+  color: red;
+}
+
+.allchats-addusers {
+  height: 2.3rem;
+  width: 2.3rem;
+  border-radius: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  transition: 0.4s ease-out;
+  position: relative;
+  z-index: 5;
+}
+
+.allchats-addusers:hover {
+  background-color: #212b36;
+}
+
+.addusers-article {
+  background-color: white;
+  height: 0;
+  width: 0;
+  max-width: 0rem;
+  border-radius: 1.3rem;
+  position: absolute;
+ top: 1.3rem;
+  right: 1.3rem;
+  opacity: 0;
+  z-index: 0;
+  transition: 0.4s ease-out;
+  background-color: #ffffff1d;
+  backdrop-filter: blur(100px);
+}
+
+.addusers-article.active {
+  background-color: white;
+  height: 70vh;
+  width: 90vw;
+  max-width: 20rem;
+  opacity: 1;
+  border-radius: 1.3rem;
+  position: absolute;
+  top: 3rem;
+  right: -3rem;
+  z-index: 9;
+  background-color: #ffffff1d;
+  backdrop-filter: blur(300px);
+}
+
+.allchats-addusers img {
+  width: 4rem;
+  height: 4rem;
+  object-fit: cover;
+}
+
 .allchats-addgroup {
   height: 2.3rem;
   width: 2.3rem;
@@ -42,8 +195,7 @@
   justify-content: center;
   align-items: center;
   transition: 0.4s ease-out;
-  position: absolute;
-  right: 2rem;
+  position: relative;
   z-index: 5;
 }
 
@@ -79,13 +231,13 @@
   padding-right: 3rem;
   border: none;
   outline: none;
-  padding-left: 2.6rem;
+  padding-left: 3rem;
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.35);
 }
 
 .allchats-users {
   width: 100%;
-  padding-top: 23vh;
+  padding-top: 20vh;
   padding-bottom: 25vh;
   height: 100vh;
   z-index: 0;
@@ -100,7 +252,6 @@
   margin-left: 6%;
   margin-right: 6%;
   margin-top: 1.3%;
-  padding: 0px;
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.35);
   display: flex;
   flex-direction: row;
@@ -133,12 +284,13 @@
 }
 
 .person-image {
-  width: 65x;
-  height: 65px;
+  width: 70x;
+  height: 70px;
   border-radius: 50%;
   object-fit: cover;
   position: absolute;
-  left: 10px;
+  left: 8px;
+  border: 0.8px solid white;
 }
 
 .group-image {
@@ -199,14 +351,14 @@
 
 .person-time {
   position: absolute;
-  right: 5px;
+  right: 30px;
   top: 20px;
   font-weight: 600;
 }
 
 .person-notification-count {
   position: absolute;
-  right: 11px;
+  right: 30px;
   bottom: 13px;
   font-weight: 600;
   background-color: #2d99ff;
@@ -218,5 +370,6 @@
   justify-content: center;
   align-items: center;
 }
+
 
 }
