--- a/client/src/Css/responsiveChat.css
+++ b/client/src/Css/responsiveChat.css
@@ -10,8 +10,9 @@
   justify-content: center;
   color: #c4cdd5;
   align-items: center;
+  /* position: relative; */
+  visibility: hidden;
   position: relative;
-  position: absolute;
   z-index: 5;
 }
 
@@ -33,7 +34,7 @@
   width: 100vw;
   height: 100vh;
     position: absolute;
-  z-index: 5;
+    top: 0;
   background-color: #212b36;
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.35);
   display: flex;
@@ -41,6 +42,19 @@
   justify-content: space-between;
   align-items: center;
   position: relative;
+}
+
+.backButton{
+  height: 100%;
+  width: 3rem;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  background-color: transparent;
+  border: none;
+  color: #c4cdd5;
+  visibility: visible;
 }
 
 .chat-person-div {
