--- a/client/src/Css/navbar.css
+++ b/client/src/Css/navbar.css
@@ -144,7 +144,7 @@ main {
   transition: all 0.4s ease-out;
 }
 
-.navbar.active .profile {
+.profile.active {
   position: absolute;
   top: 10%;
   left: 10%;
@@ -205,7 +205,7 @@ main {
   object-fit: cover;
 }
 
-.navbar.active .profileimgdiv img {
+.profile.active .profileimgdiv img {
   height: 100%;
   width: 100%;
   border-radius: 3rem;
