--- a/client/src/Css/groupsettings.css
+++ b/client/src/Css/groupsettings.css
@@ -154,6 +154,17 @@
   margin-left: 1.2rem;
 }
 
+.groupsettingsonline{
+   background-color: lightgreen;
+  height: 15px;
+  width: 15px;
+  position: absolute;
+  border: 2px solid black;
+  border-radius: 50%;
+  left: 50px;
+  bottom: 9px;
+}
+
 .groupsettingsmembers {
   height: 4.6rem;
   width: 100%;
@@ -171,6 +182,7 @@
   font-weight: 500;
   color: #c4cdd5;
   border-radius: 1rem;
+  position: relative;
   transition: all 0.4s ease-in;
 }
 
