--- a/client/src/Css/noxVerse.css
+++ b/client/src/Css/noxVerse.css
@@ -17,6 +17,17 @@
   color: red;
 }
 
+.noxverseonline {
+  background-color: lightgreen;
+  height: 15px;
+  width: 15px;
+  position: absolute;
+  border: 2px solid black;
+  border-radius: 50%;
+  right: -3px;
+  bottom: 0px;
+}
+
 .noxVerseName{
   font-size: 1.3rem;
   font-weight: 800;
