--- a/client/src/Css/chat.css
+++ b/client/src/Css/chat.css
@@ -35,7 +35,10 @@
   justify-content: space-between;
   align-items: center;
   position: relative;
+  overflow: hidden;
 }
+
+
 .backButton {
   height: 0;
   width: 0;
